--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
 }
-html{
+html {
   overflow-x: hidden !important;
 }
 /* .slick-track{
@@ -30,6 +30,7 @@ ul li {
 
 a {
   text-decoration: none !important;
+  color: #64686a;
 }
 
 :root {
@@ -170,7 +171,8 @@ nav .main-f {
 }
 
 .button-p p::after {
-  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15.619' height='15.619'%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='m14.817 7.008-.007 1.607q-.09 0-.179-.002a4.122 4.122 0 0 0-4 4.035l-1.644.006a5.576 5.576 0 0 1 1.754-4.024l-9.898.022L.85 6.96l9.823-.022A5.5 5.5 0 0 1 9.03 2.995l1.644-.004a4.057 4.057 0 0 0 3.962 4.017q.09-.003.178-.003Z'/%3E%3C/svg%3E") no-repeat 50%;
+  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15.619' height='15.619'%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='m14.817 7.008-.007 1.607q-.09 0-.179-.002a4.122 4.122 0 0 0-4 4.035l-1.644.006a5.576 5.576 0 0 1 1.754-4.024l-9.898.022L.85 6.96l9.823-.022A5.5 5.5 0 0 1 9.03 2.995l1.644-.004a4.057 4.057 0 0 0 3.962 4.017q.09-.003.178-.003Z'/%3E%3C/svg%3E")
+    no-repeat 50%;
   background-size: 16px 16px;
   content: "";
   position: absolute;
@@ -358,7 +360,7 @@ nav .main-f {
   font-family: "Cabin", sans-serif;
   font-weight: 400;
   padding-bottom: 10px;
-  color:var(--secondary-color)
+  color: var(--secondary-color);
 }
 
 /* notice part end */
@@ -1015,7 +1017,7 @@ nav .main-f {
   padding: 35px 0;
 }
 
-.ly_footer_privacy>a {
+.ly_footer_privacy > a {
   transition: opacity 0.3s;
 }
 
@@ -1048,7 +1050,7 @@ nav .main-f {
   bottom: 10%;
   right: 5%;
   display: none;
-  z-index: 1
+  z-index: 1;
 }
 
 .extra-button a {
@@ -1131,13 +1133,11 @@ nav .main-f {
 
 /* Sidebar area end */
 
-
 /* ========================== doctors itro page start ============================================== */
 /* hero start */
 #doctorsIntroHeroSection {
   padding: 120px 0;
   background-color: var(--tartiary-color);
-
 }
 
 .doctor-intro-header {
@@ -1171,7 +1171,6 @@ nav .main-f {
   color: var(--secondary-color);
   font-size: 1.8rem;
   margin-top: 75px;
-
 }
 
 .image-text h3 {
@@ -1185,12 +1184,11 @@ nav .main-f {
 .image-text p {
   font-size: 1rem;
   font-weight: 500;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.6875;
   color: var(--secondary-color);
   margin-top: 50px;
   font-family: "Yu Gothic Medium";
-
 }
 
 .image_img img {
@@ -1219,7 +1217,7 @@ nav .main-f {
 }
 
 .about_text_2 h4 span {
-  color: var(--primary-color)
+  color: var(--primary-color);
 }
 
 .about_text_2 h3 {
@@ -1233,7 +1231,6 @@ nav .main-f {
   margin-top: 25px;
   font-family: "Yu Gothic Medium";
   font-size: 1rem;
-
 }
 
 .about_img_2 img {
@@ -1241,9 +1238,6 @@ nav .main-f {
   margin-top: 75px;
   float: right;
 }
-
-
-
 
 .image_img_4 img {
   width: 100%;
@@ -1265,7 +1259,7 @@ nav .main-f {
   color: var(--primary-color);
   font-size: 1.6rem;
   font-weight: 500;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.7222222222;
   margin-top: 75px;
 }
@@ -1287,15 +1281,6 @@ nav .main-f {
 }
 
 /* image and text section end */
-
-
-
-
-
-
-
-
-
 
 /* Origin of Arrolie Clinic section start */
 #Arrolie_Clinic {
@@ -1370,7 +1355,6 @@ nav .main-f {
 
 /* Origin of Arrolie Clinic section end */
 
-
 /* gallery Part section start*/
 
 #gallery_part {
@@ -1381,7 +1365,6 @@ nav .main-f {
 .gal_img img {
   width: 18%;
   height: auto;
-  ;
 }
 
 .gal_img {
@@ -1404,22 +1387,7 @@ nav .main-f {
 
 /* gallery Part section end*/
 
-
-
-
 /* ========================== doctors itro page end ============================================== */
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ========================== toot(treatment) page start ============================================== */
 
@@ -1477,7 +1445,7 @@ nav .main-f {
 
 .toot_box h4 {
   font-size: 1rem;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.375;
   color: var(--secondary-color);
 }
@@ -1486,8 +1454,6 @@ nav .main-f {
   justify-content: space-between;
   align-items: center;
 }
-
-
 
 .gany_part {
   margin-top: 70px;
@@ -1499,7 +1465,7 @@ nav .main-f {
 
 .gany_part h2 {
   font-size: 3.2rem;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.5;
   color: var(--secondary-color);
 }
@@ -1512,7 +1478,6 @@ nav .main-f {
   width: 427px;
   margin: 0 auto;
 }
-
 
 .gany_text_1 {
   padding: 70px 60px 40px;
@@ -1542,7 +1507,7 @@ nav .main-f {
 .gany_text_2 h4 {
   font-size: 1.3rem;
   font-weight: 500;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.6875;
   margin-bottom: 22px;
   color: var(--secondary-color);
@@ -1562,7 +1527,6 @@ nav .main-f {
   margin: 0 auto;
 }
 
-
 .gany_part h4 {
   font-size: 1.1rem;
   color: var(--secondary-color);
@@ -1578,13 +1542,11 @@ nav .main-f {
   margin-top: 30px;
 }
 
-
 .gany_text_2 p {
   font-size: 1.1rem;
   color: var(--secondary-color);
   margin-bottom: 20px;
 }
-
 
 .gany_part .flex h6 {
   display: inline-block;
@@ -1594,11 +1556,11 @@ nav .main-f {
   font-size: 1.1rem;
   padding: 5px 10px 4px;
   color: var(--secondary-color);
-  border: 1px solid var(--secondary-color)
+  border: 1px solid var(--secondary-color);
 }
 
 .gany_text_1 .d-flex {
-  gap: 10px
+  gap: 10px;
 }
 
 /* .gany_text_1 .d-flex p{
@@ -1610,30 +1572,12 @@ nav .main-f {
 
 /*  medical treatment part end */
 
-
 /* ========================== toot(treatment) page end ============================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ========================== tariff  page start ============================================== */
 #tariff_part {
   padding: 120px 0 210px;
   background: #fff5f6;
-  ;
 }
 
 .tariff_main {
@@ -1644,7 +1588,7 @@ nav .main-f {
 
 .tariff_head h2 {
   font-size: 2.1rem;
-  color: var(--secondary-color)
+  color: var(--secondary-color);
 }
 
 .tariff_head p {
@@ -1653,7 +1597,6 @@ nav .main-f {
   padding: 10px 8px;
   color: var(--secondary-color);
   font-family: "Yu Gothic Medium";
-
 }
 
 .tariff_head h4 {
@@ -1664,7 +1607,7 @@ nav .main-f {
 }
 
 .tarif_flex {
-  gap: 15px
+  gap: 15px;
 }
 
 .tariff_f {
@@ -1687,13 +1630,10 @@ nav .main-f {
   max-width: 40px;
 }
 
-
-
 .tarif_box .container {
   background: #fff;
   padding: 34px 60px 60px;
 }
-
 
 .emoji {
   display: flex;
@@ -1703,13 +1643,12 @@ nav .main-f {
 #table h2 {
   margin-bottom: 12px;
   font-weight: 500;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
 }
 
 .table {
   margin: auto;
   width: 100%;
-
 }
 
 .table,
@@ -1732,9 +1671,6 @@ td {
   width: 50%;
 }
 
-
-
-
 .tarif_box {
   margin-top: 30px;
 }
@@ -1744,8 +1680,6 @@ td {
   font-size: 18px;
   margin-bottom: 10px;
 }
-
-
 
 .tarif_box h2 {
   color: var(--secondary-color);
@@ -1758,10 +1692,10 @@ td {
 }
 
 .table-left p {
-	color: var(--secondary-color);
-	font-size: 17px;
-	font-family: "Yu Gothic Medium";
-	font-weight: 500;
+  color: var(--secondary-color);
+  font-size: 17px;
+  font-family: "Yu Gothic Medium";
+  font-weight: 500;
 }
 .table-btn a {
   color: var(--secondary-color);
@@ -1772,7 +1706,7 @@ td {
 }
 
 .table-btn {
-  gap: 10px
+  gap: 10px;
 }
 
 .tariff_left_icon {
@@ -1795,13 +1729,13 @@ td {
   max-width: 40px;
 }
 .table-right h4 {
-	font-size: 1.2rem;
-	letter-spacing: .04em;
-	line-height: 1.6875;
-	display: flex;
-	justify-content: flex-end;
-	color: var(--secondary-color);
-	text-align: right;
+  font-size: 1.2rem;
+  letter-spacing: 0.04em;
+  line-height: 1.6875;
+  display: flex;
+  justify-content: flex-end;
+  color: var(--secondary-color);
+  text-align: right;
 }
 
 .table td,
@@ -1809,72 +1743,53 @@ td {
   vertical-align: middle !important;
 }
 
-
-
-.tarif_top{
+.tarif_top {
   margin-top: 40px;
 }
-.tarif_table h4{
+.tarif_table h4 {
   color: var(--secondary-color);
   margin-top: 10px;
 }
-.tarif_table p{
+.tarif_table p {
   margin-bottom: 20px;
-	color: var(--secondary-color);
-	font-size: 20px;
-	font-family: "Yu Gothic Medium";
-	font-weight: 500;
+  color: var(--secondary-color);
+  font-size: 20px;
+  font-family: "Yu Gothic Medium";
+  font-weight: 500;
 }
 /* ========================== tariff  page end ============================================== */
 
-
-
-
-
-
-
-
-
 /* ========================== timing   page start ============================================== */
 #timing_part {
-	padding-top: 170px;
-	background: #fff5f6;
+  padding-top: 170px;
+  background: #fff5f6;
 }
 #notice_part {
-	margin-top: 30px;
-	padding: 30px 0;
+  margin-top: 30px;
+  padding: 30px 0;
   background: #fff;
 }
 /* ========================== timing   page end ============================================== */
 
-
-
-
-
-
-
-
-
 /* ========================== contact page start ============================================== */
-#contact_section{
+#contact_section {
   padding: 120px 0;
-  background: #fff5f6;;
+  background: #fff5f6;
 }
 
-
-.contact_header  {
+.contact_header {
   text-align: center;
   padding-top: 80px;
 }
 
-.contact_header  span {
+.contact_header span {
   font-family: "Cormorant Infant", serif;
   font-size: 24px;
   color: #939a9a;
   padding-bottom: 10px;
 }
 
-.contact_header  h2 {
+.contact_header h2 {
   font-size: 44px;
   color: var(--secondary-color);
   font-weight: 500;
@@ -1884,8 +1799,8 @@ td {
 .contact_num ul li .florItem_num {
   width: 50px;
   height: 50px;
-  background: #939A9A;
-  border:1px solid #939A9A;
+  background: #939a9a;
+  border: 1px solid #939a9a;
   align-items: center;
   border-radius: 50%;
   display: flex;
@@ -1893,65 +1808,65 @@ td {
   justify-content: center;
   line-height: 1.2857142857;
   margin: 0 auto;
-  color:#fff;
+  color: #fff;
 }
-.contact_num ul{
+.contact_num ul {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   position: relative;
 }
 .contact_num ul .florItem_num::after {
-	position: absolute;
-	left: 120px;
-	top: 29px;
-	content: '';
-	background: #939A9A;
-	width: 38px;
-	height: 3px;
+  position: absolute;
+  left: 120px;
+  top: 29px;
+  content: "";
+  background: #939a9a;
+  width: 38px;
+  height: 3px;
 }
 .contact_num ul .florItem_num::before {
-	position: absolute;
-	right: 120px;
-	top: 29px;
-	content: '';
-	background: #939A9A;
-	width: 38px;
-	height: 3px;
+  position: absolute;
+  right: 120px;
+  top: 29px;
+  content: "";
+  background: #939a9a;
+  width: 38px;
+  height: 3px;
 }
-.florItem_ttl h2{
+.florItem_ttl h2 {
   color: var(--secondary-color);
   font-size: 15px;
 }
-.contact_massege h3{
+.contact_massege h3 {
   color: var(--secondary-color);
   font-size: 20px;
   margin-top: 20px;
 }
 
-.contact_form{
+.contact_form {
   padding: 75px;
   margin-top: 30px;
-  background: #fff;;
+  background: #fff;
 }
-.form_input input{
+.form_input input {
   width: 100%;
   padding: 20px 50px 20px 30px;
-  color:var(--secondary-color);
+  color: var(--secondary-color);
   font-size: 20px;
 }
-.form_text h5{
-  color:var(--secondary-color);
+.form_text h5 {
+  color: var(--secondary-color);
   font-size: 20px;
 }
-.form_text h5 span{
-  color:#DD6779;
+.form_text h5 span {
+  color: #dd6779;
   margin-left: 12px;
 }
-.form_input_text input{
+.form_input_text input {
   width: 100%;
   height: 200px;
 }
-.contact_para h4{
+.contact_para h4 {
   color: var(--secondary-color);
   font-size: 18px;
   margin-top: 40px;
