--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,7 @@
   padding: 0;
   margin: 0;
 }
-html {
-  overflow-x: hidden !important;
-}
-/* .slick-track{
-  width: 100% !important;
-} */
+
 body {
   overflow-x: hidden !important;
   font-family: Cabin, 游ゴシック体, YuGothic, Yu Gothic, 游ゴシック,
@@ -30,7 +25,6 @@ ul li {
 
 a {
   text-decoration: none !important;
-  color: #64686a;
 }
 
 :root {
@@ -171,8 +165,7 @@ nav .main-f {
 }
 
 .button-p p::after {
-  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15.619' height='15.619'%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='m14.817 7.008-.007 1.607q-.09 0-.179-.002a4.122 4.122 0 0 0-4 4.035l-1.644.006a5.576 5.576 0 0 1 1.754-4.024l-9.898.022L.85 6.96l9.823-.022A5.5 5.5 0 0 1 9.03 2.995l1.644-.004a4.057 4.057 0 0 0 3.962 4.017q.09-.003.178-.003Z'/%3E%3C/svg%3E")
-    no-repeat 50%;
+  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15.619' height='15.619'%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='m14.817 7.008-.007 1.607q-.09 0-.179-.002a4.122 4.122 0 0 0-4 4.035l-1.644.006a5.576 5.576 0 0 1 1.754-4.024l-9.898.022L.85 6.96l9.823-.022A5.5 5.5 0 0 1 9.03 2.995l1.644-.004a4.057 4.057 0 0 0 3.962 4.017q.09-.003.178-.003Z'/%3E%3C/svg%3E") no-repeat 50%;
   background-size: 16px 16px;
   content: "";
   position: absolute;
@@ -360,7 +353,7 @@ nav .main-f {
   font-family: "Cabin", sans-serif;
   font-weight: 400;
   padding-bottom: 10px;
-  color: var(--secondary-color);
+  color:var(--secondary-color)
 }
 
 /* notice part end */
@@ -1017,7 +1010,7 @@ nav .main-f {
   padding: 35px 0;
 }
 
-.ly_footer_privacy > a {
+.ly_footer_privacy>a {
   transition: opacity 0.3s;
 }
 
@@ -1050,7 +1043,7 @@ nav .main-f {
   bottom: 10%;
   right: 5%;
   display: none;
-  z-index: 1;
+  z-index: 1
 }
 
 .extra-button a {
@@ -1087,14 +1080,12 @@ nav .main-f {
   -ms-transition: all linear 0.5s;
   -o-transition: all linear 0.5s;
 }
-
 .sidebar .nav-item .nav-link {
-  padding: 20px 0 !important;
-  color: #64686a;
-  text-align: left;
-  font-size: 20px;
+	padding: 10px 0 !important;
+	color: #64686a;
+	text-align: left;
+	font-size: 20px;
 }
-
 .navbar-nav {
   width: 100%;
   padding: 0 20px;
@@ -1133,11 +1124,13 @@ nav .main-f {
 
 /* Sidebar area end */
 
+
 /* ========================== doctors itro page start ============================================== */
 /* hero start */
 #doctorsIntroHeroSection {
   padding: 120px 0;
   background-color: var(--tartiary-color);
+
 }
 
 .doctor-intro-header {
@@ -1171,6 +1164,7 @@ nav .main-f {
   color: var(--secondary-color);
   font-size: 1.8rem;
   margin-top: 75px;
+
 }
 
 .image-text h3 {
@@ -1184,11 +1178,12 @@ nav .main-f {
 .image-text p {
   font-size: 1rem;
   font-weight: 500;
-  letter-spacing: 0.04em;
+  letter-spacing: .04em;
   line-height: 1.6875;
   color: var(--secondary-color);
   margin-top: 50px;
   font-family: "Yu Gothic Medium";
+
 }
 
 .image_img img {
@@ -1217,7 +1212,7 @@ nav .main-f {
 }
 
 .about_text_2 h4 span {
-  color: var(--primary-color);
+  color: var(--primary-color)
 }
 
 .about_text_2 h3 {
@@ -1231,6 +1226,7 @@ nav .main-f {
   margin-top: 25px;
   font-family: "Yu Gothic Medium";
   font-size: 1rem;
+
 }
 
 .about_img_2 img {
@@ -1238,6 +1234,9 @@ nav .main-f {
   margin-top: 75px;
   float: right;
 }
+
+
+
 
 .image_img_4 img {
   width: 100%;
@@ -1259,7 +1258,7 @@ nav .main-f {
   color: var(--primary-color);
   font-size: 1.6rem;
   font-weight: 500;
-  letter-spacing: 0.04em;
+  letter-spacing: .04em;
   line-height: 1.7222222222;
   margin-top: 75px;
 }
@@ -1281,6 +1280,15 @@ nav .main-f {
 }
 
 /* image and text section end */
+
+
+
+
+
+
+
+
+
 
 /* Origin of Arrolie Clinic section start */
 #Arrolie_Clinic {
@@ -1355,6 +1363,7 @@ nav .main-f {
 
 /* Origin of Arrolie Clinic section end */
 
+
 /* gallery Part section start*/
 
 #gallery_part {
@@ -1365,6 +1374,7 @@ nav .main-f {
 .gal_img img {
   width: 18%;
   height: auto;
+  ;
 }
 
 .gal_img {
@@ -1387,7 +1397,22 @@ nav .main-f {
 
 /* gallery Part section end*/
 
+
+
+
 /* ========================== doctors itro page end ============================================== */
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ========================== toot(treatment) page start ============================================== */
 
@@ -1445,7 +1470,7 @@ nav .main-f {
 
 .toot_box h4 {
   font-size: 1rem;
-  letter-spacing: 0.04em;
+  letter-spacing: .04em;
   line-height: 1.375;
   color: var(--secondary-color);
 }
@@ -1454,6 +1479,8 @@ nav .main-f {
   justify-content: space-between;
   align-items: center;
 }
+
+
 
 .gany_part {
   margin-top: 70px;
@@ -1465,7 +1492,7 @@ nav .main-f {
 
 .gany_part h2 {
   font-size: 3.2rem;
-  letter-spacing: 0.04em;
+  letter-spacing: .04em;
   line-height: 1.5;
   color: var(--secondary-color);
 }
@@ -1478,6 +1505,7 @@ nav .main-f {
   width: 427px;
   margin: 0 auto;
 }
+
 
 .gany_text_1 {
   padding: 70px 60px 40px;
@@ -1507,7 +1535,7 @@ nav .main-f {
 .gany_text_2 h4 {
   font-size: 1.3rem;
   font-weight: 500;
-  letter-spacing: 0.04em;
+  letter-spacing: .04em;
   line-height: 1.6875;
   margin-bottom: 22px;
   color: var(--secondary-color);
@@ -1527,6 +1555,7 @@ nav .main-f {
   margin: 0 auto;
 }
 
+
 .gany_part h4 {
   font-size: 1.1rem;
   color: var(--secondary-color);
@@ -1542,11 +1571,13 @@ nav .main-f {
   margin-top: 30px;
 }
 
+
 .gany_text_2 p {
   font-size: 1.1rem;
   color: var(--secondary-color);
   margin-bottom: 20px;
 }
+
 
 .gany_part .flex h6 {
   display: inline-block;
@@ -1556,11 +1587,11 @@ nav .main-f {
   font-size: 1.1rem;
   padding: 5px 10px 4px;
   color: var(--secondary-color);
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--secondary-color)
 }
 
 .gany_text_1 .d-flex {
-  gap: 10px;
+  gap: 10px
 }
 
 /* .gany_text_1 .d-flex p{
@@ -1572,224 +1603,212 @@ nav .main-f {
 
 /*  medical treatment part end */
 
+
 /* ========================== toot(treatment) page end ============================================== */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ========================== tariff  page start ============================================== */
-#tariff_part {
-  padding: 120px 0 210px;
-  background: #fff5f6;
+#tariff_part{
+  padding: 120px 0;
+  background: #fff5f6;;
 }
-
-.tariff_main {
-  padding: 60px;
-  background: #fff;
-  margin-top: 40px;
+.tarif_ki1{
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  padding: 50px 75px;
+  background:#fff;
+  margin-top: 50px;
 }
-
-.tariff_head h2 {
-  font-size: 2.1rem;
+.tariff_hand{
   color: var(--secondary-color);
+  text-align: left;
 }
 
-.tariff_head p {
+.tarif_flex {
+  display: flex;
+  gap: 30px;
+}
+.tariff_hand h2{
+  font-size: 2.1rem;
+  color: var(--secondary-color)
+}
+.tariff_hand h3{
   font-size: 14px;
   border: 1px solid var(--border1-color);
-  padding: 10px 8px;
+  padding-left: 10px;
+  padding-right: 10px;
   color: var(--secondary-color);
-  font-family: "Yu Gothic Medium";
+  line-height: 40px;
 }
-
-.tariff_head h4 {
+.tariff_hand h4{
   font-size: 20px;
   color: var(--secondary-color);
   margin-top: 40px;
   text-align: left;
 }
-
-.tarif_flex {
-  gap: 15px;
+.tariff_first{
+  text-align: right;
+  margin-top: 13px;
 }
-
-.tariff_f {
-  margin-left: 170px;
-  margin-top: 95px;
+.tariff_first span{
+  color: var(--border1-color);
+  font-size: 18px;
+  position: relative;
 }
-
-.tariff_f a img {
-  max-width: 35px;
-  max-height: 35px;
-  margin-right: 12px;
+.tariff_first span::after {
+	position: absolute;
+	content: '';
+	left: 0;
+	bottom: -4px;
+	background: var(--secondary-color);
+	width: 110px;
+	height: 1px;
 }
-
-.tariff_f a span {
-  font-size: 14px;
+.tarif_box_parents h3 {
+	color: var(--secondary-color);
+	text-align: right;
+	margin-top: 30px;
+	font-size: 20px;
+}
+.tarif_box_children{
+  background: #fff;
+  padding: 70px 70px;
+}
+.tarif_box_children h2{
+  color: var(--secondary-color);
+}
+.tarif_box_text{
+  background: #fafafa;
+  padding: 30px 30px;
+  width: 50%;
+  border-right: 1px solid var(--border2-color);
+  /* border-bottom: 1px solid var(--border2-color); */
+}
+.tarif_box_text h3 {
+	color: var(--secondary-color);
+	font-size: 23px;
+	text-align: left;
+}
+.tarif_box_text p {
+	color: var(--secondary-color);
+	font-size: 17px;
+	font-family: "Yu Gothic Medium";
+	font-weight: 500;
+	margin-top: 20px;
+}
+.tarif_box_st a{
+  font-size: 15px;
   color: var(--secondary-color);
   font-weight: 400;
   font-family: "Cabin", sans-serif;
-  border-bottom: 1px solid var(--secondary-color);
-  max-width: 40px;
+  border: 1px solid var(--border1-color);
+  padding: 2px 20px;
 }
-
-.tarif_box .container {
+.tarif_box_st {
+	margin-top: 20px;
+}
+.tarif_box_num{
   background: #fff;
-  padding: 34px 60px 60px;
-}
-
-.emoji {
-  display: flex;
-  justify-content: end;
-}
-
-#table h2 {
-  margin-bottom: 12px;
-  font-weight: 500;
-  letter-spacing: 0.05em;
-}
-
-.table {
-  margin: auto;
-  width: 100%;
-}
-
-.table,
-td {
-  border: 1px solid #e3e3e3;
-  border-collapse: collapse;
-}
-
-.table-left {
-  background: #fafafa;
-}
-
-.table-right {
-  background: #fff;
-}
-
-.table-left,
-.table-right {
-  padding: 20px;
+  padding: 30px 30px;
   width: 50%;
 }
+.tarif_box_num h4 {
+	color: var(--secondary-color);
+	text-align: right;
+	font-size: 20px;
+}
+.tarif_box_main{
+  display: flex;
+  border: 1px solid var(--border2-color);
+  align-items: center;
+}
 
-.tarif_box {
+.tarif_top{
   margin-top: 30px;
 }
-
-.emoji {
-  color: var(--secondary-color);
-  font-size: 18px;
-  margin-bottom: 10px;
+.tarif_border{
+  border-top: red;
 }
-
-.tarif_box h2 {
-  color: var(--secondary-color);
-  font-size: 26px;
+.tarif_box_children h4 {
+	color: var(--secondary-color);
+	font-size: 20px;
+	margin-top: 30px;
+	margin-bottom: 15px;
 }
-
-.table-left h3 {
-  color: var(--secondary-color);
-  font-size: 22px;
+.tarif_upor{
+  margin-top: 30px;
 }
-
-.table-left p {
-  color: var(--secondary-color);
-  font-size: 17px;
-  font-family: "Yu Gothic Medium";
-  font-weight: 500;
-}
-.table-btn a {
-  color: var(--secondary-color);
-  font-size: 15px;
-  border: 1px solid var(--border1-color);
-  padding: 5px 26px 4px;
-  margin-top: 20px;
-}
-
-.table-btn {
-  gap: 10px;
-}
-
-.tariff_left_icon {
-  margin-left: 330px;
-  margin-top: 0px;
-}
-
-.tariff_left_icon a img {
-  max-width: 35px;
-  max-height: 35px;
-  margin-right: 12px;
-}
-
-.tariff_left_icon a span {
-  font-size: 14px;
-  color: var(--secondary-color);
-  font-weight: 400;
-  font-family: "Cabin", sans-serif;
-  border-bottom: 1px solid var(--secondary-color);
-  max-width: 40px;
-}
-.table-right h4 {
-  font-size: 1.2rem;
-  letter-spacing: 0.04em;
-  line-height: 1.6875;
-  display: flex;
-  justify-content: flex-end;
-  color: var(--secondary-color);
-  text-align: right;
-}
-
-.table td,
-.table th {
-  vertical-align: middle !important;
-}
-
-.tarif_top {
-  margin-top: 40px;
-}
-.tarif_table h4 {
-  color: var(--secondary-color);
-  margin-top: 10px;
-}
-.tarif_table p {
-  margin-bottom: 20px;
+.tarif_upor h2{
   color: var(--secondary-color);
   font-size: 20px;
-  font-family: "Yu Gothic Medium";
-  font-weight: 500;
 }
+
 /* ========================== tariff  page end ============================================== */
+
+
+
+
+
+
+
+
 
 /* ========================== timing   page start ============================================== */
 #timing_part {
-  padding-top: 170px;
-  background: #fff5f6;
+	padding-top: 170px;
+	background: #fff5f6;
 }
 #notice_part {
-  margin-top: 30px;
-  padding: 30px 0;
+	margin-top: 30px;
+	padding: 30px 0;
   background: #fff;
 }
 /* ========================== timing   page end ============================================== */
 
+
+
+
+
+
+
+
+
 /* ========================== contact page start ============================================== */
-#contact_section {
+#contact_section{
   padding: 120px 0;
-  background: #fff5f6;
+  background: #fff5f6;;
 }
 
-.contact_header {
+
+.contact_header  {
   text-align: center;
   padding-top: 80px;
 }
 
-.contact_header span {
+.contact_header  span {
   font-family: "Cormorant Infant", serif;
   font-size: 24px;
   color: #939a9a;
   padding-bottom: 10px;
 }
 
-.contact_header h2 {
+.contact_header  h2 {
   font-size: 44px;
   color: var(--secondary-color);
   font-weight: 500;
@@ -1799,8 +1818,8 @@ td {
 .contact_num ul li .florItem_num {
   width: 50px;
   height: 50px;
-  background: #939a9a;
-  border: 1px solid #939a9a;
+  background: #939A9A;
+  border:1px solid #939A9A;
   align-items: center;
   border-radius: 50%;
   display: flex;
@@ -1808,68 +1827,71 @@ td {
   justify-content: center;
   line-height: 1.2857142857;
   margin: 0 auto;
-  color: #fff;
+  color:#fff;
 }
-.contact_num ul {
+.contact_num ul{
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
   position: relative;
 }
 .contact_num ul .florItem_num::after {
-  position: absolute;
-  left: 120px;
-  top: 29px;
-  content: "";
-  background: #939a9a;
-  width: 38px;
-  height: 3px;
+	position: absolute;
+	left: 120px;
+	top: 29px;
+	content: '';
+	background: #939A9A;
+	width: 38px;
+	height: 3px;
 }
 .contact_num ul .florItem_num::before {
-  position: absolute;
-  right: 120px;
-  top: 29px;
-  content: "";
-  background: #939a9a;
-  width: 38px;
-  height: 3px;
+	position: absolute;
+	right: 120px;
+	top: 29px;
+	content: '';
+	background: #939A9A;
+	width: 38px;
+	height: 3px;
 }
-.florItem_ttl h2 {
+.florItem_ttl h2{
   color: var(--secondary-color);
   font-size: 15px;
 }
-.contact_massege h3 {
+.contact_massege h3{
   color: var(--secondary-color);
   font-size: 20px;
   margin-top: 20px;
 }
 
-.contact_form {
+.contact_form{
   padding: 75px;
   margin-top: 30px;
-  background: #fff;
+  background: #fff;;
 }
-.form_input input {
+.form_input input{
   width: 100%;
   padding: 20px 50px 20px 30px;
-  color: var(--secondary-color);
+  color:var(--secondary-color);
   font-size: 20px;
 }
-.form_text h5 {
-  color: var(--secondary-color);
+.form_text h5{
+  color:var(--secondary-color);
   font-size: 20px;
 }
-.form_text h5 span {
-  color: #dd6779;
+.form_text h5 span{
+  color:#DD6779;
   margin-left: 12px;
 }
-.form_input_text input {
+.form_input_text input{
   width: 100%;
   height: 200px;
 }
-.contact_para h4 {
+.contact_para h4{
   color: var(--secondary-color);
   font-size: 18px;
   margin-top: 40px;
 }
-
+.florItem_ttl h6{
+  color: var(--secondary-color);
+  font-size: 25px;
+}
 /* ========================== contact page end ============================================== */
