--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,8 @@ nav .main-f {
 }
 
 .button-p p::after {
-  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15.619' height='15.619'%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='m14.817 7.008-.007 1.607q-.09 0-.179-.002a4.122 4.122 0 0 0-4 4.035l-1.644.006a5.576 5.576 0 0 1 1.754-4.024l-9.898.022L.85 6.96l9.823-.022A5.5 5.5 0 0 1 9.03 2.995l1.644-.004a4.057 4.057 0 0 0 3.962 4.017q.09-.003.178-.003Z'/%3E%3C/svg%3E") no-repeat 50%;
+  background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15.619' height='15.619'%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='m14.817 7.008-.007 1.607q-.09 0-.179-.002a4.122 4.122 0 0 0-4 4.035l-1.644.006a5.576 5.576 0 0 1 1.754-4.024l-9.898.022L.85 6.96l9.823-.022A5.5 5.5 0 0 1 9.03 2.995l1.644-.004a4.057 4.057 0 0 0 3.962 4.017q.09-.003.178-.003Z'/%3E%3C/svg%3E")
+    no-repeat 50%;
   background-size: 16px 16px;
   content: "";
   position: absolute;
@@ -195,12 +196,31 @@ nav .main-f {
   z-index: -1;
 }
 
+.b-01 img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* background: url(../Images/banner1.jpg) no-repeat center / cover; */
+}
 .b-01 {
-  background: url(../Images/banner1.jpg) no-repeat center / cover;
+  position: relative;
 }
 
+.b-02 img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* background: url(../Images/banner1.jpg) no-repeat center / cover; */
+}
 .b-02 {
-  background: url(../Images/banner2.jpg) no-repeat center / cover;
+  position: relative;
+}
+.b-02 {
+  /* background: url(../Images/banner2.jpg) no-repeat center / cover; */
 }
 
 .hero_btn a {
@@ -328,7 +348,10 @@ nav .main-f {
   font-weight: 400;
   margin-top: 140px;
 }
-
+.notice_left h4 a {
+  font-size: 11px;
+  color: var(--secondary-color);
+}
 .notice_left h4 img {
   height: 17px;
   width: 17px;
@@ -346,6 +369,14 @@ nav .main-f {
   border: 1px solid var(--secondary-color);
   padding: 3px 25px;
   margin: 0 23px 0 23px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.notice_item a:hover {
+  background: var(--border2-color);
 }
 
 .notice_right {
@@ -353,7 +384,7 @@ nav .main-f {
   font-family: "Cabin", sans-serif;
   font-weight: 400;
   padding-bottom: 10px;
-  color:var(--secondary-color)
+  color: var(--secondary-color);
 }
 
 /* notice part end */
@@ -1010,7 +1041,7 @@ nav .main-f {
   padding: 35px 0;
 }
 
-.ly_footer_privacy>a {
+.ly_footer_privacy > a {
   transition: opacity 0.3s;
 }
 
@@ -1043,7 +1074,7 @@ nav .main-f {
   bottom: 10%;
   right: 5%;
   display: none;
-  z-index: 1
+  z-index: 1;
 }
 
 .extra-button a {
@@ -1081,16 +1112,19 @@ nav .main-f {
   -o-transition: all linear 0.5s;
 }
 .sidebar .nav-item .nav-link {
-	padding: 10px 0 !important;
-	color: #64686a;
-	text-align: left;
-	font-size: 20px;
+  padding: 10px 0 !important;
+  color: #64686a;
+  text-align: left;
+  font-size: 20px;
 }
 .navbar-nav {
   width: 100%;
   padding: 0 20px;
+  justify-content: center;
 }
-
+.navbar-nav ul li a {
+  color: #64686a;
+}
 .show {
   color: #64686a;
 }
@@ -1124,13 +1158,11 @@ nav .main-f {
 
 /* Sidebar area end */
 
-
 /* ========================== doctors itro page start ============================================== */
 /* hero start */
 #doctorsIntroHeroSection {
   padding: 120px 0;
   background-color: var(--tartiary-color);
-
 }
 
 .doctor-intro-header {
@@ -1164,7 +1196,6 @@ nav .main-f {
   color: var(--secondary-color);
   font-size: 1.8rem;
   margin-top: 75px;
-
 }
 
 .image-text h3 {
@@ -1178,12 +1209,11 @@ nav .main-f {
 .image-text p {
   font-size: 1rem;
   font-weight: 500;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.6875;
   color: var(--secondary-color);
   margin-top: 50px;
   font-family: "Yu Gothic Medium";
-
 }
 
 .image_img img {
@@ -1212,7 +1242,7 @@ nav .main-f {
 }
 
 .about_text_2 h4 span {
-  color: var(--primary-color)
+  color: var(--primary-color);
 }
 
 .about_text_2 h3 {
@@ -1226,7 +1256,6 @@ nav .main-f {
   margin-top: 25px;
   font-family: "Yu Gothic Medium";
   font-size: 1rem;
-
 }
 
 .about_img_2 img {
@@ -1234,9 +1263,6 @@ nav .main-f {
   margin-top: 75px;
   float: right;
 }
-
-
-
 
 .image_img_4 img {
   width: 100%;
@@ -1258,7 +1284,7 @@ nav .main-f {
   color: var(--primary-color);
   font-size: 1.6rem;
   font-weight: 500;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.7222222222;
   margin-top: 75px;
 }
@@ -1280,15 +1306,6 @@ nav .main-f {
 }
 
 /* image and text section end */
-
-
-
-
-
-
-
-
-
 
 /* Origin of Arrolie Clinic section start */
 #Arrolie_Clinic {
@@ -1363,7 +1380,6 @@ nav .main-f {
 
 /* Origin of Arrolie Clinic section end */
 
-
 /* gallery Part section start*/
 
 #gallery_part {
@@ -1374,7 +1390,6 @@ nav .main-f {
 .gal_img img {
   width: 18%;
   height: auto;
-  ;
 }
 
 .gal_img {
@@ -1397,22 +1412,7 @@ nav .main-f {
 
 /* gallery Part section end*/
 
-
-
-
 /* ========================== doctors itro page end ============================================== */
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ========================== toot(treatment) page start ============================================== */
 
@@ -1470,7 +1470,7 @@ nav .main-f {
 
 .toot_box h4 {
   font-size: 1rem;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.375;
   color: var(--secondary-color);
 }
@@ -1479,8 +1479,6 @@ nav .main-f {
   justify-content: space-between;
   align-items: center;
 }
-
-
 
 .gany_part {
   margin-top: 70px;
@@ -1492,7 +1490,7 @@ nav .main-f {
 
 .gany_part h2 {
   font-size: 3.2rem;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.5;
   color: var(--secondary-color);
 }
@@ -1505,7 +1503,6 @@ nav .main-f {
   width: 427px;
   margin: 0 auto;
 }
-
 
 .gany_text_1 {
   padding: 70px 60px 40px;
@@ -1535,7 +1532,7 @@ nav .main-f {
 .gany_text_2 h4 {
   font-size: 1.3rem;
   font-weight: 500;
-  letter-spacing: .04em;
+  letter-spacing: 0.04em;
   line-height: 1.6875;
   margin-bottom: 22px;
   color: var(--secondary-color);
@@ -1555,7 +1552,6 @@ nav .main-f {
   margin: 0 auto;
 }
 
-
 .gany_part h4 {
   font-size: 1.1rem;
   color: var(--secondary-color);
@@ -1571,13 +1567,11 @@ nav .main-f {
   margin-top: 30px;
 }
 
-
 .gany_text_2 p {
   font-size: 1.1rem;
   color: var(--secondary-color);
   margin-bottom: 20px;
 }
-
 
 .gany_part .flex h6 {
   display: inline-block;
@@ -1587,11 +1581,11 @@ nav .main-f {
   font-size: 1.1rem;
   padding: 5px 10px 4px;
   color: var(--secondary-color);
-  border: 1px solid var(--secondary-color)
+  border: 1px solid var(--secondary-color);
 }
 
 .gany_text_1 .d-flex {
-  gap: 10px
+  gap: 10px;
 }
 
 /* .gany_text_1 .d-flex p{
@@ -1603,39 +1597,22 @@ nav .main-f {
 
 /*  medical treatment part end */
 
-
 /* ========================== toot(treatment) page end ============================================== */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ========================== tariff  page start ============================================== */
-#tariff_part{
+#tariff_part {
   padding: 120px 0;
-  background: #fff5f6;;
+  background: #fff5f6;
 }
-.tarif_ki1{
+.tarif_ki1 {
   display: flex;
   justify-content: center;
   align-items: end;
   padding: 50px 75px;
-  background:#fff;
+  background: #fff;
   margin-top: 50px;
 }
-.tariff_hand{
+.tariff_hand {
   color: var(--secondary-color);
   text-align: left;
 }
@@ -1644,11 +1621,11 @@ nav .main-f {
   display: flex;
   gap: 30px;
 }
-.tariff_hand h2{
+.tariff_hand h2 {
   font-size: 2.1rem;
-  color: var(--secondary-color)
+  color: var(--secondary-color);
 }
-.tariff_hand h3{
+.tariff_hand h3 {
   font-size: 14px;
   border: 1px solid var(--border1-color);
   padding-left: 10px;
@@ -1656,44 +1633,44 @@ nav .main-f {
   color: var(--secondary-color);
   line-height: 40px;
 }
-.tariff_hand h4{
+.tariff_hand h4 {
   font-size: 20px;
   color: var(--secondary-color);
   margin-top: 40px;
   text-align: left;
 }
-.tariff_first{
+.tariff_first {
   text-align: right;
   margin-top: 13px;
 }
-.tariff_first span{
+.tariff_first span {
   color: var(--border1-color);
   font-size: 18px;
   position: relative;
 }
 .tariff_first span::after {
-	position: absolute;
-	content: '';
-	left: 0;
-	bottom: -4px;
-	background: var(--secondary-color);
-	width: 110px;
-	height: 1px;
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: -4px;
+  background: var(--secondary-color);
+  width: 110px;
+  height: 1px;
 }
 .tarif_box_parents h3 {
-	color: var(--secondary-color);
-	text-align: right;
-	margin-top: 30px;
-	font-size: 20px;
+  color: var(--secondary-color);
+  text-align: right;
+  margin-top: 30px;
+  font-size: 20px;
 }
-.tarif_box_children{
+.tarif_box_children {
   background: #fff;
   padding: 70px 70px;
 }
-.tarif_box_children h2{
+.tarif_box_children h2 {
   color: var(--secondary-color);
 }
-.tarif_box_text{
+.tarif_box_text {
   background: #fafafa;
   padding: 30px 30px;
   width: 50%;
@@ -1701,18 +1678,18 @@ nav .main-f {
   /* border-bottom: 1px solid var(--border2-color); */
 }
 .tarif_box_text h3 {
-	color: var(--secondary-color);
-	font-size: 23px;
-	text-align: left;
+  color: var(--secondary-color);
+  font-size: 23px;
+  text-align: left;
 }
 .tarif_box_text p {
-	color: var(--secondary-color);
-	font-size: 17px;
-	font-family: "Yu Gothic Medium";
-	font-weight: 500;
-	margin-top: 20px;
+  color: var(--secondary-color);
+  font-size: 17px;
+  font-family: "Yu Gothic Medium";
+  font-weight: 500;
+  margin-top: 20px;
 }
-.tarif_box_st a{
+.tarif_box_st a {
   font-size: 15px;
   color: var(--secondary-color);
   font-weight: 400;
@@ -1721,94 +1698,77 @@ nav .main-f {
   padding: 2px 20px;
 }
 .tarif_box_st {
-	margin-top: 20px;
+  margin-top: 20px;
 }
-.tarif_box_num{
+.tarif_box_num {
   background: #fff;
   padding: 30px 30px;
   width: 50%;
 }
 .tarif_box_num h4 {
-	color: var(--secondary-color);
-	text-align: right;
-	font-size: 20px;
+  color: var(--secondary-color);
+  text-align: right;
+  font-size: 20px;
 }
-.tarif_box_main{
+.tarif_box_main {
   display: flex;
   border: 1px solid var(--border2-color);
   align-items: center;
 }
 
-.tarif_top{
+.tarif_top {
   margin-top: 30px;
 }
-.tarif_border{
+.tarif_border {
   border-top: red;
 }
 .tarif_box_children h4 {
-	color: var(--secondary-color);
-	font-size: 20px;
-	margin-top: 30px;
-	margin-bottom: 15px;
+  color: var(--secondary-color);
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
-.tarif_upor{
+.tarif_upor {
   margin-top: 30px;
 }
-.tarif_upor h2{
+.tarif_upor h2 {
   color: var(--secondary-color);
   font-size: 20px;
 }
 
 /* ========================== tariff  page end ============================================== */
 
-
-
-
-
-
-
-
-
 /* ========================== timing   page start ============================================== */
 #timing_part {
-	padding-top: 170px;
-	background: #fff5f6;
+  padding-top: 170px;
+  background: #fff5f6;
 }
 #notice_part {
-	margin-top: 30px;
-	padding: 30px 0;
+  margin-top: 30px;
+  padding: 30px 0;
   background: #fff;
 }
 /* ========================== timing   page end ============================================== */
 
-
-
-
-
-
-
-
-
 /* ========================== contact page start ============================================== */
-#contact_section{
+#contact_section {
   padding: 120px 0;
-  background: #fff5f6;;
+  background: #fff5f6;
 }
 
-
-.contact_header  {
+.contact_header {
   text-align: center;
   padding-top: 80px;
 }
 
-.contact_header  span {
+.contact_header span {
   font-family: "Cormorant Infant", serif;
   font-size: 24px;
   color: #939a9a;
   padding-bottom: 10px;
 }
 
-.contact_header  h2 {
+.contact_header h2 {
   font-size: 44px;
   color: var(--secondary-color);
   font-weight: 500;
@@ -1818,8 +1778,8 @@ nav .main-f {
 .contact_num ul li .florItem_num {
   width: 50px;
   height: 50px;
-  background: #939A9A;
-  border:1px solid #939A9A;
+  background: #939a9a;
+  border: 1px solid #939a9a;
   align-items: center;
   border-radius: 50%;
   display: flex;
@@ -1827,71 +1787,272 @@ nav .main-f {
   justify-content: center;
   line-height: 1.2857142857;
   margin: 0 auto;
-  color:#fff;
+  color: #fff;
 }
-.contact_num ul{
+.contact_num ul {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   position: relative;
 }
 .contact_num ul .florItem_num::after {
-	position: absolute;
-	left: 120px;
-	top: 29px;
-	content: '';
-	background: #939A9A;
-	width: 38px;
-	height: 3px;
+  position: absolute;
+  left: 120px;
+  top: 29px;
+  content: "";
+  background: #939a9a;
+  width: 38px;
+  height: 3px;
 }
 .contact_num ul .florItem_num::before {
-	position: absolute;
-	right: 120px;
-	top: 29px;
-	content: '';
-	background: #939A9A;
-	width: 38px;
-	height: 3px;
+  position: absolute;
+  right: 120px;
+  top: 29px;
+  content: "";
+  background: #939a9a;
+  width: 38px;
+  height: 3px;
 }
-.florItem_ttl h2{
+.florItem_ttl h2 {
   color: var(--secondary-color);
   font-size: 15px;
 }
-.contact_massege h3{
+.contact_massege h3 {
   color: var(--secondary-color);
   font-size: 20px;
   margin-top: 20px;
 }
 
-.contact_form{
+.contact_form {
   padding: 75px;
   margin-top: 30px;
-  background: #fff;;
+  background: #fff;
 }
-.form_input input{
+.form_input input {
   width: 100%;
   padding: 20px 50px 20px 30px;
-  color:var(--secondary-color);
+  color: var(--secondary-color);
   font-size: 20px;
 }
-.form_text h5{
-  color:var(--secondary-color);
+.form_text h5 {
+  color: var(--secondary-color);
   font-size: 20px;
 }
-.form_text h5 span{
-  color:#DD6779;
+.form_text h5 span {
+  color: #dd6779;
   margin-left: 12px;
 }
-.form_input_text input{
+.form_input_text input {
   width: 100%;
   height: 200px;
 }
-.contact_para h4{
+.contact_para h4 {
   color: var(--secondary-color);
   font-size: 18px;
   margin-top: 40px;
 }
-.florItem_ttl h6{
+.florItem_ttl h6 {
   color: var(--secondary-color);
   font-size: 25px;
 }
 /* ========================== contact page end ============================================== */
+
+/* ========================== pair page start ============================================== */
+#pair_part {
+  padding: 100px 0 90px;
+  background: #fff5f6;
+}
+.pair_text {
+  padding: 80px;
+  background: #fff;
+  text-align: left;
+  margin-top: 90px;
+}
+.pair_text h5 {
+  color: var(--secondary-color);
+  font-size: 15px;
+}
+.pair_text h2 {
+  color: var(--secondary-color);
+  margin-top: 30px;
+}
+.pair_text a {
+  color: var(--secondary-color);
+  font-size: 15px;
+  border: 1px solid var(--border2-color);
+  text-align: center;
+  padding: 4px 6px;
+}
+.pair_text h6 {
+  color: var(--secondary-color);
+  margin-top: 50px;
+}
+.pair_a a {
+  color: var(--border1-color);
+  font-size: 18px;
+  text-align: center;
+  margin-top: 30px;
+  display: block;
+}
+/* ========================== pair page end ============================================== */
+
+/* ========================== pair_4 pages start ============================================== */
+.pair_head h5 {
+  color: var(--secondary-color);
+  font-size: 2.4rem;
+  text-align: center;
+  margin-top: 120px;
+}
+.pair_head h2 {
+  color: var(--secondary-color);
+  font-size: 3.4rem;
+  text-align-last: center;
+  margin-top: 30px;
+}
+.pair_tabs {
+  margin-top: 60px;
+}
+.class_menu li {
+  height: 50px;
+  background: #fff;
+  margin-right: 20px;
+}
+.class_menu li {
+  width: 17%;
+  font-size: 20px;
+}
+.class_menu li .nav-link {
+  width: 100%;
+  line-height: 50px;
+  padding: 0;
+  border-radius: 0;
+  color: var(--secondary-color);
+}
+.class_menu .nav-link.active,
+.class_menu .show > .nav-link {
+  color: #fff;
+  background-color: var(--secondary-color);
+}
+.pair_parents {
+  padding: 80px;
+  background: #fff;
+  text-align: left;
+  margin-top: 40px;
+}
+.pair_child_text h3 {
+  font-size: 20px;
+  color: var(--border2-color);
+  display: inline-block;
+}
+.pair_child_text a {
+  color: var(--border2-color);
+  font-size: 15px;
+  border: 1px solid var(--border2-color);
+  text-align: center;
+  padding: 4px 6px;
+  margin-left: 10px;
+}
+.pair_child_text h5 {
+  font-size: 17px;
+  margin-top: 10px;
+  color: var(--secondary-color);
+  border-bottom: 1px solid var(--border2-color);
+  padding-bottom: 30px;
+  transition: all linear 0.3s;
+  -webkit-transition: all linear 0.3s;
+  -moz-transition: all linear 0.3s;
+  -ms-transition: all linear 0.3s;
+  -o-transition: all linear 0.3s;
+}
+.pair_child_text h5:hover {
+  color: var(--border1-color);
+}
+.text-top {
+  margin-top: 30px;
+}
+/* ========================== pair_4 page end ============================================== */
+
+/* ========================== banner_pic page end ============================================== */
+#banner_pic_part {
+  padding: 100px 0 90px;
+  background: #fff5f6;
+}
+.banner_imtax {
+  padding: 80px;
+  background: #fff;
+  text-align: left;
+  margin-top: 80px;
+}
+.banner_imtax_img img {
+  width: 100%;
+}
+.banner_imtax_img h5 {
+  color: var(--secondary-color);
+  font-size: 18px;
+  margin-top: 30px;
+}
+.banner_imtax_img h3 {
+  color: var(--secondary-color);
+  font-size: 2.3rem;
+  margin-top: 20px;
+}
+.banner_imtax_text h2 {
+  color: red;
+  font-size: 2.4rem;
+  margin-top: 40px;
+  border-bottom: 1px solid var(--border1-color);
+  padding-bottom: 10px;
+}
+.banner_imtax_text h5 {
+  color: var(--secondary-color);
+  font-size: 16px;
+  margin-top: 30px;
+}
+.banner_imtax_text h4 {
+  color: var(--secondary-color);
+  font-size: 17px;
+  margin-top: 20px;
+}
+.banner_imtax_text a {
+  color: var(--secondary-color);
+  background: yellow;
+  font-size: 18px;
+  margin-top: 15px;
+}
+.banner_box {
+  width: 70%;
+  border: 1px solid var(--border1-color);
+  display: flex;
+}
+.banner_box_num {
+  width: 20%;
+  border-right: 1px solid var(--border1-color);
+  padding: 5px;
+}
+.banner_box_num h3 {
+  font-size: 14px;
+  color: var(--secondary-color);
+}
+.banner_box_text {
+  width: 80%;
+  padding: 5px;
+}
+.banner_box_text h3 {
+  font-size: 14px;
+  color: var(--secondary-color);
+}
+.border_nai {
+  border-top: transparent;
+}
+.banner_pic_box_main {
+  margin-top: 30px;
+}
+.banner_bg {
+  background: #000;
+}
+.banner_change h3 {
+  color: #fff;
+}
+.banner_sada h3 {
+  color: #fff;
+}
+/* ========================== banner_pic page end ============================================== */
